# SCANN_v2

./: .gitignore  README.md  SCANN.py  SCANN_config.json  calc_triplet_mean_std.py  requirements.txt  run_scann.py  siril_help_test.ssf  test_app_path.py  test_cuda_simple.py  test_cuda_status.py  test_dataset.py  test_fixed_paths.py  test_focal_loss.py  test_model_cache.py  test_path_calculation.py  test_torch_env.py  test_torch_import.py  test_training.py  test_training_fixed.py  test_training_flow.py  test_training_quick.py  train_triplet_resnet_augmented.py
scann_v2/: =1.24  SCANN_config.json  pyproject.toml  scann_v2_config.json  test_button_signals.py  verify_logging.py
scann_v2/docs/: Format For Optical Astrometric Observations Of Comets, Minor Planets and Natural Satellites.md  TODO.md  architecture.md  logging_system_summary.md  new requirements.md  ui_ux_design.md
scann_v2/tests/: conftest.py  test_annotation_models.py  test_astrometry.py  test_batch_process_dialog.py  test_blink_service.py  test_blink_speed_slider.py  test_candidate_detector.py  test_collapsible_sidebar.py  test_config.py  test_coordinate_label.py  test_database.py  test_detection_pipeline.py  test_detection_service_ai.py  test_exclusion_service.py  test_file_manager.py  test_fits_annotation_backend.py  test_fits_dataset.py  test_fits_io.py  test_histogram_panel.py  test_image_aligner.py  test_image_processor.py  test_image_viewer_enhanced.py  test_inference_full_image.py  test_logger.py  test_logger_fixed.py  test_logging.py  test_logging_system.py  test_main_window.py  test_model.py  (+20 more)
(+70 files in other folders)
